--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-render-html": "^0.6.0",
     "react-responsive-carousel": "^3.1.49",
     "react-scripts": "0.9.5",
     "react-transition-group": "^4.0.0"
