--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "myretail",
   "version": "0.1.0",
+  "author": "Blaise Kpwe",
+  "description": "Case Study for Target Interview",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
@@ -11,7 +13,11 @@
     "react-scripts": "0.9.5",
     "react-transition-group": "^4.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-react-16": "^1.0.0",
+    "enzyme-to-json": "^3.3.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
