--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "react-transition-group": "^4.0.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
     "enzyme-react-16": "^1.0.0",
-    "enzyme-to-json": "^3.3.5"
+    "enzyme-to-json": "^3.3.5",
+    "react-test-renderer": "^16.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
